Translation fixes on Agreement / Intervention validation; validator translation fixes (wip)

--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-02 23:11+0200\n"
+"POT-Creation-Date: 2023-03-03 13:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -682,8 +682,8 @@ msgstr "يجب عليك تحديد نوع CSO هذا"
 msgid ""
 "\"CSO Type\" does not apply to non-CSO organizations, please remove type"
 msgstr ""
-"لا ينطبق &quot;نوع CSO&quot; على المنظمات غير التابعة لمنظمات المجتمع "
-"المدني ، يرجى إزالة النوع"
+"لا ينطبق \"نوع CSO\" على المنظمات غير التابعة لمنظمات المجتمع المدني ، يرجى "
+"إزالة النوع"
 
 msgid "Unable to associate staff member to UNICEF user"
 msgstr "تعذر ربط الموظف بمستخدم اليونيسف"
@@ -1583,7 +1583,7 @@ msgid "Cannot add a new amendment while the partner is blocked in Vision."
 msgstr "لا يمكن إضافة تعديل جديد أثناء حظر الشريك في Vision."
 
 msgid "Other description required, if type 'Other' selected."
-msgstr "مطلوب وصف آخر ، إذا تم تحديد نوع &quot;أخرى&quot;."
+msgstr "مطلوب وصف آخر ، إذا تم تحديد نوع \"أخرى\"."
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "سيتم تعيين الزيارة المخططة على مستوى الشريك فقط"
@@ -1593,7 +1593,7 @@ msgstr "لا يمكن تعيين الزيارة المخططة للتدخلات 
 
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
-msgstr "لا يمكن تغيير المرفق في الحالات &quot;منتهي أو مغلق أو منتهي&quot;"
+msgstr "لا يمكن تغيير المرفق في الحالات \"منتهي أو مغلق أو منتهي\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr "لا يمكن تحديث الإخراج لشريك محظور في Vision"
@@ -1878,7 +1878,7 @@ msgid ""
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
 "يوجد بالفعل PCA مع هذا الشريك لدورة البرنامج القطري هذه. إذا كان السجل في "
-"حالة &quot;مسودة&quot; يرجى تعديل ذلك السجل."
+"حالة \"مسودة\" يرجى تعديل ذلك السجل."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
@@ -2269,7 +2269,7 @@ msgstr ""
 "لا يوجد لدى المؤسسة الشريكة رقم بائع مخزن ، يرجى إبلاغ نقطة اتصال etools"
 
 msgid "Partner Organization has no \"Authorized Officers selected\" selected"
-msgstr "لم يتم تحديد &quot;موظفون مفوضون&quot; محددون لدى المؤسسة الشريكة"
+msgstr "لم يتم تحديد \"موظفون مفوضون\" محددون لدى المؤسسة الشريكة"
 
 msgid ""
 "Response returned by the Server does not have the necessary values to "
