--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-02 23:11+0200\n"
+"POT-Creation-Date: 2023-03-03 13:28+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1592,7 +1592,7 @@ msgstr ""
 "Vision."
 
 msgid "Other description required, if type 'Other' selected."
-msgstr "Se requiere otra descripción, si se selecciona el tipo &#39;Otro&#39;."
+msgstr "Se requiere otra descripción, si se selecciona el tipo 'Otro'."
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "Visita planificada que se establecerá solo a nivel de socio"
@@ -1605,8 +1605,8 @@ msgstr ""
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
 msgstr ""
-"Un archivo adjunto no se puede cambiar en los estados &quot;Terminado, "
-"Cerrado o Terminado&quot;"
+"Un archivo adjunto no se puede cambiar en los estados \"Terminado, Cerrado o "
+"Terminado\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1917,7 +1917,7 @@ msgid ""
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
 "Ya existe un PCA con este socio para este ciclo de programa de país. Si el "
-"registro está en estado &quot;Borrador&quot;, edítelo."
+"registro está en estado \"Borrador\", edítelo."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
@@ -2334,8 +2334,8 @@ msgstr ""
 
 msgid "Partner Organization has no \"Authorized Officers selected\" selected"
 msgstr ""
-"La organización asociada no tiene ningún &quot;Funcionario autorizado "
-"seleccionado&quot; seleccionado"
+"La organización asociada no tiene ningún \"Funcionario autorizado "
+"seleccionado\" seleccionado"
 
 msgid ""
 "Response returned by the Server does not have the necessary values to "
