--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-02 23:11+0200\n"
+"POT-Creation-Date: 2023-03-03 13:28+0000\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -684,24 +684,22 @@ msgstr ""
 "supprimer le type."
 
 msgid "Unable to associate staff member to UNICEF user"
-msgstr ""
-"Impossible d&#39;associer un membre du personnel à un utilisateur UNICEF"
+msgstr "Impossible d'associer un membre du personnel à un utilisateur UNICEF"
 
 #, python-format
 msgid "This user already exists under a different partnership: %s"
-msgstr "Cet utilisateur existe déjà sous un autre partenariat : %s"
+msgstr "Cet utilisateur existe déjà sous un autre partenariat: %s"
 
 #, python-format
 msgid ""
 "User emails cannot be changed, please remove the user and add another one: %s"
 msgstr ""
 "Les e-mails des utilisateurs ne peuvent pas être modifiés, veuillez "
-"supprimer l&#39;utilisateur et en ajouter un autre : %s"
+"supprimer l'utilisateur et en ajouter un autre: %s"
 
 msgid "User already synced to PRP and cannot be disabled."
 msgstr ""
-"L&#39;utilisateur est déjà synchronisé avec PRP et ne peut pas être "
-"désactivé."
+"L'utilisateur est déjà synchronisé avec PRP et ne peut pas être désactivé."
 
 msgid "Name"
 msgstr "Nom"
@@ -1498,7 +1496,7 @@ msgid "Accessing this item is not allowed."
 msgstr "L'accès à cet élément n'est pas autorisé."
 
 msgid "Country Programme is required for PCAs!"
-msgstr "Le programme de pays est requis pour les PCA !"
+msgstr "Le programme de pays est requis pour les PCA!"
 
 msgid "URL"
 msgstr "URL"
@@ -1589,16 +1587,15 @@ msgstr ""
 "même type est en cours."
 
 msgid "Date cannot be in the future!"
-msgstr "La date ne peut pas être dans le futur !"
+msgstr "La date ne peut pas être dans le futur!"
 
 msgid "Cannot add a new amendment while the partner is blocked in Vision."
 msgstr ""
-"Impossible d&#39;ajouter un nouvel amendement tant que le partenaire est "
-"bloqué dans Vision."
+"Impossible d'ajouter un nouvel amendement tant que le partenaire est bloqué "
+"dans Vision."
 
 msgid "Other description required, if type 'Other' selected."
-msgstr ""
-"Autre description requise, si le type &quot;Autre&quot; est sélectionné."
+msgstr "Autre description requise, si le type \"Autre\" est sélectionné."
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "Visite planifiée à définir uniquement au niveau du partenaire"
@@ -1610,8 +1607,8 @@ msgstr ""
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
 msgstr ""
-"Une pièce jointe ne peut pas être modifiée dans les statuts &quot;Terminé, "
-"Fermé ou Terminé&quot;"
+"Une pièce jointe ne peut pas être modifiée dans les statuts \"Terminé, Fermé "
+"ou Terminé\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1627,8 +1624,8 @@ msgstr ""
 msgid ""
 "Cannot change the intervention that this reporting period is associated with."
 msgstr ""
-"Impossible de modifier l&#39;intervention à laquelle cette période de "
-"rapport est associée."
+"Impossible de modifier l'intervention à laquelle cette période de rapport "
+"est associée."
 
 msgid "end_date must be on or after start_date"
 msgstr "end_date doit être le ou après start_date"
@@ -1687,10 +1684,10 @@ msgid "This field cannot be empty."
 msgstr "Ce champ ne peut pas être vide."
 
 msgid "Requirement ID passed in does not exist"
-msgstr "L&#39;ID d&#39;exigence transmis n&#39;existe pas"
+msgstr "L'ID d'exigence transmis n'existe pas"
 
 msgid "Requirement ID passed in belongs to a different intervention"
-msgstr "L&#39;ID d&#39;exigence transmis appartient à une autre intervention"
+msgstr "L'ID d'exigence transmis appartient à une autre intervention"
 
 msgid "You're trying to delete a record that has a start date in the past"
 msgstr ""
@@ -1715,22 +1712,22 @@ msgid ""
 "The email for the partner contact is used by another partner contact. Email "
 "has to be unique to proceed %s"
 msgstr ""
-"L&#39;adresse e-mail du contact partenaire est utilisée par un autre contact "
-"partenaire. L&#39;e-mail doit être unique pour continuer %s"
+"L'adresse e-mail du contact partenaire est utilisée par un autre contact "
+"partenaire. L'e-mail doit être unique pour continuer %s"
 
 msgid ""
 "The Partner Staff member you are trying to activate is associated with a "
 "different Partner Organization"
 msgstr ""
-"Le membre du personnel partenaire que vous essayez d&#39;activer est associé "
-"à une autre organisation partenaire"
+"Le membre du personnel partenaire que vous essayez d'activer est associé à "
+"une autre organisation partenaire"
 
 msgid ""
 "User already synced to PRP and cannot be disabled. Please instruct the "
 "partner to disable from PRP"
 msgstr ""
-"L&#39;utilisateur est déjà synchronisé avec PRP et ne peut pas être "
-"désactivé. Veuillez demander au partenaire de désactiver le PRP"
+"L'utilisateur est déjà synchronisé avec PRP et ne peut pas être désactivé. "
+"Veuillez demander au partenaire de désactiver le PRP"
 
 msgid "The Date of Report cannot be in the future"
 msgstr "La date du rapport ne peut pas être dans le futur"
@@ -1896,13 +1893,12 @@ msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
 "equal to today"
 msgstr ""
-"L&#39;accord ne peut pas passer à signé tant que la date de début n&#39;est "
-"pas inférieure ou égale à aujourd&#39;hui"
+"L'accord ne peut pas passer à signé tant que la date de début n'est pas "
+"inférieure ou égale à aujourd'hui"
 
 msgid "Agreement cannot transition to signed unless the end date is defined"
 msgstr ""
-"L&#39;accord ne peut pas passer à signé tant que la date de fin n&#39;est "
-"pas définie"
+"L'accord ne peut pas passer à signé tant que la date de fin n'est pas définie"
 
 msgid "Cannot Transition without termination doc attached"
 msgstr "Impossible de faire la transition sans document de résiliation joint"
@@ -1920,19 +1916,17 @@ msgid ""
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
 "Un PCA avec ce partenaire existe déjà pour ce cycle de programme de pays. Si "
-"l&#39;enregistrement est à l&#39;état &quot;Brouillon&quot;, veuillez le "
-"modifier."
+"l'enregistrement est à l'état \"Brouillon\", veuillez le modifier."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
 msgstr ""
-"La date de début de l&#39;accord doit être antérieure ou identique à la date "
-"de fin"
+"La date de début de l'accord doit être antérieure ou identique à la date de "
+"fin"
 
 msgid "You cannot have more than 1 PCA active per Partner within 1 CP"
 msgstr ""
-"Vous ne pouvez pas avoir plus d&#39;un PCA actif par partenaire dans un même "
-"PC"
+"Vous ne pouvez pas avoir plus d'un PCA actif par partenaire dans un même PC"
 
 msgid "Partner must be CSO in order to create a PCA."
 msgstr "Le partenaire doit être CSO pour créer une PCA."
@@ -2141,30 +2135,28 @@ msgid ""
 "Cannot delete an agreement that is not Draft or has PDs/SSFAs associated "
 "with it"
 msgstr ""
-"Impossible de supprimer un accord qui n&#39;est pas un brouillon ou qui est "
+"Impossible de supprimer un accord qui n'est pas un brouillon ou qui est "
 "associé à des PD/SSFA"
 
 msgid "Workspace is required as a queryparam"
-msgstr "L&#39;espace de travail est requis en tant que paramètre de requête"
+msgstr "L'espace de travail est requis en tant que paramètre de requête"
 
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
 msgstr ""
-"Le code d&#39;espace de travail fourni n&#39;est pas un business_area_code "
-"valide : %s"
+"Le code d'espace de travail fourni n'est pas un business_area_code valide: %s"
 
 msgid "ID values must be integers"
-msgstr "Les valeurs d&#39;ID doivent être des nombres entiers"
+msgstr "Les valeurs d'ID doivent être des nombres entiers"
 
 msgid "Deleting an attachment can only be done in Draft status"
 msgstr ""
-"La suppression d&#39;une pièce jointe ne peut être effectuée qu&#39;en état "
-"Brouillon"
+"La suppression d'une pièce jointe ne peut être effectuée qu'en état Brouillon"
 
 msgid ""
 "This PD Output has indicators related, please remove the indicators first"
 msgstr ""
-"Ce produit PD a des indicateurs liés, veuillez d&#39;abord supprimer les "
+"Ce produit PD a des indicateurs liés, veuillez d'abord supprimer les "
 "indicateurs"
 
 msgid ""
@@ -2176,12 +2168,10 @@ msgstr ""
 "pour continuer"
 
 msgid "Deleting an indicator is only possible in status Draft."
-msgstr ""
-"La suppression d&#39;un indicateur n&#39;est possible qu&#39;en état "
-"Brouillon."
+msgstr "La suppression d'un indicateur n'est possible qu'en état Brouillon."
 
 msgid "Cannot delete a PD or SSFA that is not Draft"
-msgstr "Impossible de supprimer un PD ou SSFA qui n&#39;est pas un brouillon"
+msgstr "Impossible de supprimer un PD ou SSFA qui n'est pas un brouillon"
 
 msgid "Cannot delete a PD or SSFA that has Planned Trips"
 msgstr "Impossible de supprimer un PD ou SSFA qui a des trajets planifiés"
@@ -2198,7 +2188,7 @@ msgid "Meeting date is not available."
 msgstr "La date de la réunion n'est pas disponible."
 
 msgid "Action is not allowed"
-msgstr "L&#39;action n&#39;est pas autorisée"
+msgstr "L'action n'est pas autorisée"
 
 msgid "You need to be a focal point in order to perform this action"
 msgstr "Vous devez être un point focal pour effectuer cette action"
@@ -2210,18 +2200,18 @@ msgid ""
 "You cannot perform this action while the PD is not available for partner to "
 "edit"
 msgstr ""
-"Vous ne pouvez pas effectuer cette action tant que le PD n&#39;est pas "
+"Vous ne pouvez pas effectuer cette action tant que le PD n'est pas "
 "disponible pour que le partenaire puisse le modifier"
 
 msgid ""
 "You cannot perform this action while the PD is not available for UNICEF to "
 "edit"
 msgstr ""
-"Vous ne pouvez pas effectuer cette action tant que le PD n&#39;est pas "
-"disponible pour que l&#39;UNICEF puisse le modifier"
+"Vous ne pouvez pas effectuer cette action tant que le PD n'est pas "
+"disponible pour que l'UNICEF puisse le modifier"
 
 msgid "UNICEF has already accepted this PD."
-msgstr "L&#39;UNICEF a déjà accepté ce DP."
+msgstr "L'UNICEF a déjà accepté ce DP."
 
 msgid "Only focal points or budget owners can accept"
 msgstr ""
@@ -2231,13 +2221,13 @@ msgid "Only focal points can accept"
 msgstr "Seuls les points focaux peuvent accepter"
 
 msgid "PD needs to be in Review state"
-msgstr "PD doit être à l&#39;état Révision"
+msgstr "PD doit être à l'état Révision"
 
 msgid "PD review is missing"
-msgstr "L&#39;examen de PD est manquant"
+msgstr "L'examen de PD est manquant"
 
 msgid "Only overall approver can reject review."
-msgstr "Seul l&#39;approbateur général peut rejeter la révision."
+msgstr "Seul l'approbateur général peut rejeter la révision."
 
 msgid "PD review already approved"
 msgstr "Revue PD déjà approuvée"
@@ -2251,9 +2241,9 @@ msgid ""
 "This can be caused by parallel merged amendment or changed original "
 "intervention. Amendment should be re-created."
 msgstr ""
-"Erreur de fusion : le champ modifié a déjà été modifié (%(field)s à "
+"Erreur de fusion: le champ modifié a déjà été modifié (%(field)s à "
 "%(instance)s). Cela peut être causé par un amendement fusionné parallèle ou "
-"une intervention originale modifiée. L&#39;amendement devrait être recréé."
+"une intervention originale modifiée. L'amendement devrait être recréé."
 
 msgid "PD has already been cancelled."
 msgstr "PD a déjà été annulé."
@@ -2276,7 +2266,7 @@ msgstr ""
 "Seuls les points focaux ou les propriétaires de budget peuvent suspendre"
 
 msgid "PD is not suspended."
-msgstr "PD n&#39;est pas suspendu."
+msgstr "PD n'est pas suspendu."
 
 msgid "Only focal points or budget owners can unsuspend"
 msgstr ""
@@ -2287,7 +2277,7 @@ msgid "PD is already in Signature status."
 msgstr "PD est déjà en statut Signature."
 
 msgid "Only overall approver can accept review."
-msgstr "Seul l&#39;approbateur général peut accepter la révision."
+msgstr "Seul l'approbateur général peut accepter la révision."
 
 msgid "PD is already unlocked."
 msgstr "PD est déjà déverrouillé."
@@ -2301,33 +2291,33 @@ msgstr ""
 "partenaire"
 
 msgid "PD is currently with UNICEF"
-msgstr "PD est actuellement avec l&#39;UNICEF"
+msgstr "PD est actuellement avec l'UNICEF"
 
 msgid "Only partner focal points can send to UNICEF"
-msgstr "Seuls les points focaux partenaires peuvent envoyer à l&#39;UNICEF"
+msgstr "Seuls les points focaux partenaires peuvent envoyer à l'UNICEF"
 
 msgid "Only amended interventions can be merged"
 msgstr "Seules les interventions modifiées peuvent être fusionnées"
 
 msgid "Amendment cannot be merged yet"
-msgstr "L&#39;amendement ne peut pas encore être fusionné"
+msgstr "L'amendement ne peut pas encore être fusionné"
 
 msgid "Amendment does not exist for this pd"
-msgstr "L&#39;amendement n&#39;existe pas pour ce pd"
+msgstr "L'amendement n'existe pas pour ce pd"
 
 msgid "Cannot delete a completed assessment"
 msgstr "Impossible de supprimer une évaluation terminée"
 
 msgid "No vendor number provided for Partner Organization"
-msgstr "Aucun numéro de fournisseur fourni pour l&#39;organisation partenaire"
+msgstr "Aucun numéro de fournisseur fourni pour l'organisation partenaire"
 
 msgid ""
 "There was a PCA/SSFA signed with this partner or a transaction was performed "
 "against this partner. The Partner record cannot be deleted"
 msgstr ""
 "Un PCA/SSFA a été signé avec ce partenaire ou une transaction a été "
-"effectuée contre ce partenaire. L&#39;enregistrement de partenaire ne peut "
-"pas être supprimé"
+"effectuée contre ce partenaire. L'enregistrement de partenaire ne peut pas "
+"être supprimé"
 
 msgid "This partner has trips associated to it"
 msgstr "Ce partenaire est associé à des voyages"
@@ -2339,26 +2329,26 @@ msgid "Terms to be acknowledged"
 msgstr "Termes à reconnaître"
 
 msgid "Agreement with specified ID does not exist"
-msgstr "L&#39;accord avec l&#39;ID spécifié n&#39;existe pas"
+msgstr "L'accord avec l'ID spécifié n'existe pas"
 
 msgid ""
 "Partner Organization has no vendor number stored, please report to an etools "
 "focal point"
 msgstr ""
-"L&#39;organisation partenaire n&#39;a pas de numéro de fournisseur stocké, "
-"veuillez le signaler à un point focal etools"
+"L'organisation partenaire n'a pas de numéro de fournisseur stocké, veuillez "
+"le signaler à un point focal etools"
 
 msgid "Partner Organization has no \"Authorized Officers selected\" selected"
 msgstr ""
-"L&#39;organisation partenaire n&#39;a pas sélectionné de &quot;dirigeants "
-"autorisés sélectionnés&quot;"
+"L'organisation partenaire n'a pas sélectionné de \"dirigeants autorisés "
+"sélectionnés\""
 
 msgid ""
 "Response returned by the Server does not have the necessary values to "
 "generate PCA"
 msgstr ""
-"La réponse renvoyée par le serveur n&#39;a pas les valeurs nécessaires pour "
+"La réponse renvoyée par le serveur n'a pas les valeurs nécessaires pour "
 "générer PCA"
 
 msgid "Partnership Manager role required for pca export."
-msgstr "Rôle de gestionnaire de partenariat requis pour l&#39;exportation pca."
+msgstr "Rôle de gestionnaire de partenariat requis pour l'exportation pca."
