--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-02 23:11+0200\n"
+"POT-Creation-Date: 2023-03-03 13:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1615,7 +1615,7 @@ msgstr ""
 "bloqueado no Vision."
 
 msgid "Other description required, if type 'Other' selected."
-msgstr "Outra descrição necessária, se o tipo &#39;Outro&#39; for selecionado."
+msgstr "Outra descrição necessária, se o tipo 'Outro' for selecionado."
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "Visita planejada a ser definida apenas no nível do parceiro"
@@ -1626,8 +1626,8 @@ msgstr "Visita planejada não pode ser definida para intervenções encerradas"
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
 msgstr ""
-"Um anexo não pode ser alterado nos status &quot;Finalizado, Fechado ou "
-"Encerrado&quot;"
+"Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou Encerrado"
+"\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1934,7 +1934,7 @@ msgid ""
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
 "Já existe um PCA com este parceiro para este Ciclo do Programa de País. Se o "
-"registro estiver no status &quot;Rascunho&quot;, edite-o."
+"registro estiver no status \"Rascunho\", edite-o."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
@@ -2355,7 +2355,7 @@ msgstr ""
 
 msgid "Partner Organization has no \"Authorized Officers selected\" selected"
 msgstr ""
-"A organização parceira não tem &quot;Oficiais autorizados selecionados&quot; "
+"A organização parceira não tem \"Oficiais autorizados selecionados\" "
 "selecionados"
 
 msgid ""
