--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-03 13:28+0000\n"
+"POT-Creation-Date: 2023-03-07 11:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1773,6 +1773,12 @@ msgstr "Intervenção desconhecida."
 
 msgid "EZHACT Vision integration disabled"
 msgstr "Integração com o EZHACT Vision desativada"
+
+msgid "The vendor number could not be found in INSIGHT"
+msgstr "O número do fornecedor não pôde ser encontrado em INSIGHT"
+
+msgid "Partner skipped because one or more of the required fields are missing"
+msgstr "Parceiro pulado porque falta um ou mais dos campos requeridos"
 
 msgid "PDF could not be generated properly"
 msgstr "O PDF não pôde ser gerado corretamente"
