--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-03 13:28+0000\n"
+"POT-Creation-Date: 2023-03-07 11:40+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1757,6 +1757,12 @@ msgstr "Intervención desconocida."
 
 msgid "EZHACT Vision integration disabled"
 msgstr "Integración de EZHACT Vision desactivada"
+
+msgid "The vendor number could not be found in INSIGHT"
+msgstr "No se ha podido encontrar el número de vendedor en INSIGHT"
+
+msgid "Partner skipped because one or more of the required fields are missing"
+msgstr "Socio omitido porque faltan uno o más de los campos obligatorios"
 
 msgid "PDF could not be generated properly"
 msgstr "No se ha podido generar correctamente el PDF"
