--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-07 11:40+0000\n"
+"POT-Creation-Date: 2023-03-07 13:01+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -725,6 +725,24 @@ msgstr "Низкий"
 
 msgid "Not Required"
 msgstr "Не требуется"
+
+msgid "Low Capacity (High Risk)"
+msgstr "Низкий потенциал (высокий риск)"
+
+msgid "Medium Capacity (Moderate Risk)"
+msgstr "Средний потенциал (умеренный риск)"
+
+msgid "Full Capacity (Low Risk)"
+msgstr "Полная мощность (низкий риск)"
+
+msgid "Low Capacity Assumed - Emergency"
+msgstr "Предполагается низкая пропускная способность - аварийная ситуация"
+
+msgid "No Contact with Beneficiaries"
+msgstr "Нет контакта с бенефициарами"
+
+msgid "Not Assessed"
+msgstr "Не оценивается"
 
 msgid "International"
 msgstr "Международная"
