--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-07 13:01+0000\n"
+"POT-Creation-Date: 2023-03-16 08:26+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1173,6 +1173,9 @@ msgstr "Intervención modificada"
 msgid "Intervention amendments"
 msgstr "Enmiendas de intervención"
 
+msgid "Q1"
+msgstr ""
+
 msgid "Intervention"
 msgstr "Intervención"
 
@@ -1611,6 +1614,11 @@ msgstr ""
 
 msgid "Other description required, if type 'Other' selected."
 msgstr "Se requiere otra descripción, si se selecciona el tipo 'Otro'."
+
+#, fuzzy
+#| msgid "Active"
+msgid "Inactive"
+msgstr "Activo"
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "Visita planificada que se establecerá solo a nivel de socio"
