--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-07 13:01+0000\n"
+"POT-Creation-Date: 2023-03-16 08:26+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1170,6 +1170,9 @@ msgstr "Программа с поправками"
 msgid "Intervention amendments"
 msgstr "Поправки к программе"
 
+msgid "Q1"
+msgstr ""
+
 msgid "Intervention"
 msgstr "Программа"
 
@@ -1606,6 +1609,11 @@ msgstr ""
 
 msgid "Other description required, if type 'Other' selected."
 msgstr "Требуется другое описание, если выбран тип «Другое»."
+
+#, fuzzy
+#| msgid "Active"
+msgid "Inactive"
+msgstr "Активный"
 
 msgid "Planned Visit to be set only at Partner level"
 msgstr "Запланированный визит устанавливается только на уровне партнера"
